# OOP_Kantor

./: CMakeLists.txt  Exchange.h  Value.h  main.cpp
Exchangers/: Currency.h  DollarsExchange.h  EuroExchange.h  PLNExchange.h
Money/: EUR.h  PLN.h  USD.h
src/Exchangers/: DollarsExchange.h  EuroExchange.h
src/Money/: EUR.h  PLN.h  USD.h
